# cops

./: .gitignore  LICENSE  README.md  clustering_example.py  compare_powerset_flow.py  def_ilp.py  example.py  example_linear.py  init_graph.py  main_loop.py  main_loop_clustering.py  optimization_wrappers.py  pyproject.toml  requirements.txt  setup.py
cops/: agent_problem.py  animate.py  clustering.py  constr_cluster.py  constr_dyn.py  constr_flow.py  constr_powerset.py  explore_problem.py  graph.py  optimization_wrappers.py  problem.py
examples/: clustering_example.py  compare_powerset_flow.py  example.py  example_linear.py  graph_examples.py  huge_loop_clustering.py  linear.py  main_loop.py  main_loop_clustering.py  medium.py  medium_clustering.py  medium_loop.py
examples/ICCPS20/: compare_powerset_flow.py  small.py
graph_connectivity/: animate.py  animate2.py  animate_problem_sequence.py  clustering.py  clustering_animate.py  constr_cluster.py  constr_dyn.py  constr_flow.py  constr_powerset.py  def_flow_ilp.py  def_ilp.py  explore_problem.py  graph.py  main_methods.py  optimization_wrappers.py  problem.py  problem_animate.py
learn_to_return/: centralized.py  centralized_test.py  centralized_train.py  graph_examples.py  medium_loop.py  one_robot_test.py  one_robot_train.py
tests/: test_agent_clustering.py  test_clustering.py  test_frontier_weighting.py  test_full.py  test_full_adaptive.py  test_full_flow.py  test_graph.py  test_ilp.py  test_inflate.py  test_kill_frontier.py  test_master_communication_constraint.py  test_spectral_clustering.py
(+2 files in other folders)
