[tool.poetry]
name = "cops"
version = "1.0.0"
description = "Graph connectivity for intermittent connectivity in multi-agent networks"
authors = ["Filip Klaesson, Petter Nilsson"]
license = "BSD 3-Clause"

[tool.poetry.dependencies]
#python = ">=3.8,<3.10"
networkx = "^2.5.1"
#matplotlib = "^3.4.1"
#scipy = "^1.6.2"
sklearn = "^0.0"
colorama = "^0.4.4"
pytest = "^6.2.3"
#pygraphviz = "^1.7"
gurobipy = "^9.1.1"
Mosek = "^9.2.42"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
